--- a/portafolio.css
+++ b/portafolio.css
@@ -67,10 +67,22 @@ body {
 }
 
 .iconos{
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap:wrap;
+    gap:30px;
+    margin-top:20px;
 }
-
-
+.iconos img {
+    height: auto; 
+    opacity: 0; 
+    transform: translateY(50px); 
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+.iconos img.scroll-in {
+    opacity: 1; 
+    transform: translateY(0); 
+}
 
 .btn-black {
 background-color: black;
@@ -150,12 +162,17 @@ ul {
     text-align:right;
 }
 .galeria {
-    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    gap:10px 25px;
+    margin-top: 50px;
 }
 
 .galeria img {
     vertical-align: top;
-    width: 300px;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
     margin: 20px;
     padding: 5px;
     opacity: 0.5;
